--- a/devlink/UserCard.module.css
+++ b/devlink/UserCard.module.css
@@ -1,6 +1,7 @@
 .user-card__wrapper {
   display: flex;
   width: 100%;
+  max-width: 20rem;
   padding: 24px;
   flex-direction: column;
   justify-content: flex-start;
@@ -12,7 +13,7 @@
 
   background-color: rgba(255, 255, 255, 1);
 
-  box-shadow: 0px 10px 24px rgba(16, 48, 160, 0.1);
+  box-shadow: 0 10px 24px 0 rgba(16, 48, 160, 0.1);
 }
 
 .user-card__header {
@@ -45,6 +46,8 @@
 }
 
 .user-card__thumbnail {
+  overflow: hidden;
+  border-radius: 100px;
   object-fit: cover;
 }
 
@@ -123,6 +126,8 @@
   border-radius: 8px;
 
   background-color: rgba(0, 113, 255, 1);
+
+  text-decoration: none;
 }
 
 .button-label {
@@ -145,6 +150,8 @@
   border-radius: 8px;
 
   background-color: rgba(230, 238, 255, 1);
+
+  text-decoration: none;
 }
 
 .button-label--secondary {
